--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="bio">I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me. </div>
 
   </article>
-  
+
   <div class="divider"></div>
 
   <article class="skills">
@@ -57,6 +57,16 @@
   </article>
 
   <div class="divider"></div>
+
+  <section class="social">
+    <img class="imgsocial" src="/images/Social Media.png" alt="">
+  </section>
+
+  <div class="workarrow">
+    <img class="arrow" src="/images/Vector 6.png" alt="">
+    <p class="pwork">Work</p>
+  </div>
+  
 
   
 </body>
