Updated css for readability and added anchor elemnt in index

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="app-bar">
     <div>
-      <h2 class="logo-placeholder">John Doe</h2>
+      <a><h2 class="logo-placeholder">John Doe</h2></a>
     </div>
     <div><img src="/images/IconoTripleMenu.png" alt="" class="tripleicon"></div>
   </header>
