Fixed images callback

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
       <a><h2 class="logo-placeholder">John Doe</h2></a>
     </div>
-    <div><img src="/images/IconoTripleMenu.png" alt="" class="tripleicon"></div>
+    <div><img src="./images/IconoTripleMenu.png" alt="" class="tripleicon"></div>
   </header>
   <article class="intro">
     <div class="name-intro">Esteban Serrano</div>
@@ -59,11 +59,11 @@
   <div class="divider"></div>
 
   <section class="social">
-    <img class="imgsocial" src="/images/Social Media.png" alt="">
+    <img class="imgsocial" src="./images/Social Media.png" alt="">
   </section>
 
   <div class="workarrow">
-    <img class="arrow" src="/images/Vector 6.png" alt="">
+    <img class="arrow" src="./images/Vector 6.png" alt="">
     <p class="pwork">Work</p>
   </div>
   
